"Release v1.0.1: Fix String key logic fallback to @KeyMethod and add validation tests"